# mdreport

./: .gitignore  README.md  pyproject.toml
mdreport/: __init__.py  report_generator.py  sections.py
