[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdreport"
version = "0.1.0"
description = "A simple markdown report generator for Python"
readme = "README.md"
authors = [
    { name = "Rishad Joarder", email = "sa.dip987@gmail.com" }
    ]
dependencies = [
    "mdutils",
    "matplotlib",
    "pathlib", 
]
requires-python = ">=3.6"
license = {text = "MIT License"}
keywords = ["markdown", "report", "generator", "result", "evluation", "MarkDown"]

[project.urls]
Homepage = "https://github.com/RishadR/mdreport"


